--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+    crossorigin="anonymous">
+
+
   <link rel="stylesheet" href="/css/main.css">
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
