--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 
   <link rel="stylesheet" href="/css/main.css">
   <script async defer src="https://buttons.github.io/buttons.js"></script>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+
 </head>
 
 <body>
